# algorithms_cpp

./: CMakeLists.txt  Makefile  README.md  clean.bat  clean.cmake  clean.sh  main.cc  main.cpp  run.bat  run.sh
bit-manipulation/: CMakeLists.txt  counting-set-bits.cc  highest-set-bits.cc  n-bits-gray-code.cc
bit_manipulation/: counting-set-bits.cpp  counting-set-bits.h
include/: bit-manipulation.h  type-def.h
